jupyter with artists

--- a/test.ipynb
+++ b/test.ipynb
@@ -227,28 +227,7 @@
       "Done. Found 25 songs.\n",
       "Searching for songs by Justin Timberlake...\n",
       "\n",
-      "Song 1: \"Mirrors\"\n",
-      "Song 2: \"Suit & Tie\"\n",
-      "Song 3: \"Say Something\"\n",
-      "Song 4: \"SexyBack\"\n",
-      "Song 5: \"Pusher Love Girl\"\n",
-      "Song 6: \"Filthy\"\n",
-      "Song 7: \"Cry Me a River\"\n",
-      "\"TKO (Black Friday Remix)\" is not valid. Skipping.\n",
-      "Song 8: \"TKO\"\n",
-      "Song 9: \"CAN’T STOP THE FEELING!\"\n",
-      "Song 10: \"My Love\"\n",
-      "\"Without Me (Remix)\" is not valid. Skipping.\n",
-      "Song 11: \"Tunnel Vision\"\n",
-      "Song 12: \"That Girl\"\n",
-      "Song 13: \"Blue Ocean Floor\"\n",
-      "Song 14: \"Strawberry Bubblegum\"\n",
-      "Song 15: \"What Goes Around... / ...Comes Around (Interlude)\"\n",
-      "Song 16: \"Not a Bad Thing\"\n",
-      "Song 17: \"Cabaret\"\n",
-      "Song 18: \"Supplies\"\n",
-      "Song 19: \"Spaceship Coupe\"\n",
-      "Song 20: \"Don’t Hold the Wall\"\n"
+      "Song 1: \"Mirrors\"\n"
      ]
     }
    ],
