--- a/main.ipynb
+++ b/main.ipynb
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "d22d3020",
    "metadata": {
     "scrolled": true
@@ -21,7 +21,7 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import songlyrics as sl\n",
+    "import utils.songlyrics as sl\n",
     "import string\n",
     "from collections import defaultdict\n",
     "from nltk.corpus import stopwords\n",
