a technically functional frontend, but very wrong

--- a/filtered.ipynb
+++ b/filtered.ipynb
@@ -60,7 +60,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 23,
       "metadata": {
         "id": "ZRQb4iM7awnV",
         "scrolled": true
@@ -79,7 +79,8 @@
         "import collections\n",
         "import gc\n",
         "import math\n",
-        "import pickle"
+        "import pickle\n",
+        "import json"
       ]
     },
     {
@@ -561,7 +562,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": 14,
       "metadata": {
         "id": "Tnv2CZeGco9t"
       },
@@ -571,17 +572,17 @@
           "output_type": "stream",
           "text": [
             "      Genre                                           WordFreq  \\\n",
-            "0       pop  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "1       pop  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "2       pop  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "3       pop  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "4       pop  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
+            "0       pop  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "1       pop  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "2       pop  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "3       pop  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "4       pop  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
             "...     ...                                                ...   \n",
-            "4074  metal  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "4075  metal  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "4076  metal  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "4077  metal  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
-            "4078  metal  {'zodiac': 0, 'ohwoahoh': 0, 'beatbeats': 0, '...   \n",
+            "4074  metal  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "4075  metal  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "4076  metal  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "4077  metal  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
+            "4078  metal  {'threatens': 0, 'denmark': 0, 'secretly': 0, ...   \n",
             "\n",
             "                                           WordFreqList  UniqueWords  \n",
             "0     [0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, ...           71  \n",
@@ -603,6 +604,28 @@
       "source": [
         "word_df = word_df.rename(columns = {'Artist':'WordFreqList'})\n",
         "print(word_df)"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 41,
+      "id": "89b622d2",
+      "metadata": {},
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "total of 29983 uniq words\n"
+          ]
+        }
+      ],
+      "source": [
+        "# write wordlist to disk for frontend use\n",
+        "output = word_df.head(1)['WordFreq']\n",
+        "print(f'total of {len(output[0])} uniq words')\n",
+        "with open('data/words.txt', 'w') as f:\n",
+        "    f.write(str(list(output[0].keys())))\n"
       ]
     },
     {
